--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -157,6 +157,7 @@ r_maxmodeldecal "50"
 r_maxnewsamples "9"
 r_maxsampledist "999999999999999999999999999"
 r_minnewsamples "9"
+r_norefresh "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "1"
 r_pixelfog "1"
