--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -161,6 +161,7 @@ r_maxmodeldecal "4"
 r_maxnewsamples "0"
 r_maxsampledist "0"
 r_minsampledist "0"
+r_norefresh "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "0"
 r_pixelfog "1"
