--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -150,6 +150,7 @@ r_maxmodeldecal "128"
 r_maxnewsamples "9"
 r_maxsampledist "999999999999999999999999999"
 r_minnewsamples "9"
+r_norefresh "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "1"
 r_pixelfog "1"
