--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -156,6 +156,7 @@ r_maxmodeldecal "8192"
 r_maxnewsamples "9"
 r_maxsampledist "999999999999999999999999999"
 r_minnewsamples "9"
+r_norefresh "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "1"
 r_pixelfog "1"
