--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -157,6 +157,7 @@ r_maxmodeldecal "0"
 r_maxnewsamples "1"
 r_maxsampledist "1"
 r_minnewsamples "1"
+r_norefresh "1"
 r_occlusion "1"
 r_PhysPropStaticLighting "0"
 r_pixelfog "1"
