--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -159,6 +159,7 @@ r_maxsampledist "999999999999999999999999999"
 r_minnewsamples "9"
 r_norefresh "1"
 r_occlusion "1"
+r_occludermincount "1"
 r_PhysPropStaticLighting "1"
 r_pixelfog "1"
 r_propsmaxdist "999999999999999999999999999"
