--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -52,6 +52,7 @@ con_enable "1"
 decalfrequency "1"
 dsp_enhance_stereo "1"
 dsp_slow_cpu "0"
+engine_no_focus_sleep "0"
 fast_fogvolume "1"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
