--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -51,6 +51,7 @@ cl_updaterate "67"
 con_enable "1"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "1"
+engine_no_focus_sleep "0"
 fast_fogvolume "1"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
