--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -152,6 +152,7 @@ r_flashlightmodels "0"
 r_flashlightculldepth "0"
 r_flashlightscissor "0"
 r_flex "0"
+r_frustumcullworld "1"
 r_lod "2"
 r_maxdlights "0"
 r_maxmodeldecal "0"
