--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -153,6 +153,7 @@ r_flashlightmodels "0"
 r_flashlightculldepth "0"
 r_flashlightscissor "0"
 r_flex "0"
+r_frustumcullworld "1"
 r_lod "2"
 r_maxdlights "32"
 r_maxmodeldecal "25"
