--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -27,7 +27,7 @@ cl_localnetworkbackdoor "0"
 cl_phys_props_enable "1"
 cl_phys_props_max "999999999999999999999999999"
 cl_phys_props_respawndist "999999999999999999999999999"
-cl_phys_props_respawnrate "60"
+cl_phys_props_respawnrate "999999999999999999999999999"
 cl_new_impact_effects "0"
 cl_playerspraydisable "0"
 cl_ragdoll_collide "1"
