--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -32,7 +32,7 @@ cl_localnetworkbackdoor "0"
 cl_phys_props_enable "1"
 cl_phys_props_max "999999999999999999999999999"
 cl_phys_props_respawndist "999999999999999999999999999"
-cl_phys_props_respawnrate "60"
+cl_phys_props_respawnrate "999999999999999999999999999"
 cl_playerspraydisable "1"
 cl_ragdoll_collide "1"
 cl_ragdoll_fade_time "15"
