--- a/Half-Life 2/autoexecHQ.cfg
+++ b/Half-Life 2/autoexecHQ.cfg
@@ -147,6 +147,7 @@ r_flashlightmodels "1"
 r_flashlightculldepth "1"
 r_flashlightscissor "1"
 r_flex "1"
+r_lightcache_zbuffercache "1"
 r_lod "0"
 r_maxdlights "128"
 r_maxmodeldecal "128"
