--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -11,6 +11,7 @@ echo "use cl_minmodels 1 for buggy player models that still render as ERROR mode
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 echo "use GCFScape to open and view VPK files"
 echo "r_queued_post_processing causes flashing colors and other graphical bugs when joining a game, reconnecting fixes flashing colors but still produces post processing glitches like strobing and dimming of post processing lights and disappearing gun"
+echo "cl_phys_props_max at a value too large will cause disappearing props when shot"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -35,7 +36,7 @@ cl_localnetworkbackdoor "0"
 cl_minmodels "0"
 cl_new_impact_effects "0"
 cl_phys_props_enable "1"
-cl_phys_props_max "99999999999999999999999999"
+cl_phys_props_max "999999999"
 cl_phys_props_respawndist "999999999999999999999999999"
 cl_phys_props_respawnrate "999999999999999999999999999"
 cl_playerspraydisable "1"
