--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -4,6 +4,7 @@ echo "never use fps_max 0, increases latency, bugs some servers to force fps_max
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 echo "use GCFScape to open and view VPK files"
 echo "r_queued_post_processing causes flashing colors and other graphical bugs when joining a game, reconnecting fixes flashing colors but still produces post processing glitches like strobing and dimming of post processing lights and disappearing gun"
+echo "cl_phys_props_max at a value too large will cause disappearing props when shot"
 
 blink_duration "0.2"
 cl_allowdownload "0"
@@ -30,7 +31,7 @@ cl_interp "0.015152"
 cl_interp_ratio "1"
 cl_localnetworkbackdoor "0"
 cl_phys_props_enable "1"
-cl_phys_props_max "999999999999999999999999999"
+cl_phys_props_max "999999999"
 cl_phys_props_respawndist "999999999999999999999999999"
 cl_phys_props_respawnrate "999999999999999999999999999"
 cl_playerspraydisable "1"
