--- a/Counter-Strike: Source/autoexecHQ.cfg
+++ b/Counter-Strike: Source/autoexecHQ.cfg
@@ -125,7 +125,7 @@ mod_forcetouchdata "1"
 mod_forcedata "1"
 mod_touchalldata "1"
 mod_offline_hdr_switch "1"
-mp_decals "300"
+mp_decals "4096"
 name "TyranT🜨"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
@@ -134,7 +134,7 @@ net_maxpacketdrop "0"
 
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
-r_decals "300"
+r_decals "4096"
 r_decalstaticprops "1"
 r_drawdetailprops "1"
 r_drawflecks "1"
@@ -201,6 +201,7 @@ snd_defer_trace "1"
 snd_disable_mixer_duck "1"
 snd_noextraupdate "1"
 snd_async_spew_blocking "0"
+sp_decals "4096"
 
 violence_ablood "1"
 violence_agibs "1"
