--- a/Counter-Strike: Source/autoexecPERF.cfg
+++ b/Counter-Strike: Source/autoexecPERF.cfg
@@ -12,6 +12,7 @@ echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowh
 echo "use GCFScape to open and view VPK files"
 echo "r_queued_post_processing causes flashing colors and other graphical bugs when joining a game, reconnecting fixes flashing colors but still produces post processing glitches like strobing and dimming of post processing lights and disappearing gun"
 echo "cl_phys_props_max at a value too large will cause disappearing props when shot"
+echo "(con_logfile foo.log) to save console output as file in Counter-Strike Source/cstrike directory"
 
 blink_duration "0"
 cl_allowdownload "0"
