--- a/Team Fortress 2/autoexecPERF.cfg
+++ b/Team Fortress 2/autoexecPERF.cfg
@@ -6,6 +6,7 @@ echo "use GCFScape to open and view VPK files"
 echo "r_queued_decals 1 causes crashing"
 echo "r_queued_post_processing causes flashing colors and other graphical bugs when joining a game, reconnecting fixes flashing colors but still produces post processing glitches like strobing and dimming of post processing lights and disappearing gun"
 echo "cl_phys_props_max at a value too large will cause disappearing props when shot"
+echo "(con_logfile foo.log) to save console output as file in Team Fortress 2/tf directory"
 
 blink_duration "0"
 cl_allowdownload "0"
