--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -62,6 +62,7 @@ flex_smooth "1"
 fast_fogvolume "1"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
+flex_smooth "1"
 fov_desired "90"
 fps_max "999"
 fx_drawimpactdebris "1"
