--- a/Counter-Strike: Source/autoexecPRO.cfg
+++ b/Counter-Strike: Source/autoexecPRO.cfg
@@ -66,6 +66,7 @@ flex_smooth "0"
 fast_fogvolume "1"
 filesystem_buffer_size "1"
 filesystem_max_stdio_read "64"
+flex_smooth "0"
 fog_enable "0"
 fps_max "999"
 fx_drawimpactdebris "0"
