--- a/Half-Life 2/autoexecUltraHQ.cfg
+++ b/Half-Life 2/autoexecUltraHQ.cfg
@@ -244,6 +244,10 @@ sv_minupdaterate "128"
 sv_npc_talker_maxdist "999999999999999999999999999"
 sv_rcon_log "0"
 sv_unlockedchapters "99"
+sv_vote_allow_spectators "0"
+sv_client_max_interp_ratio "1"
+sv_client_min_interp_ratio "1"
+sv_disablefreezecam "1"
 tv_enable "0"
 windows_speaker_config "0"
 
