--- a/Left 4 Dead 2/autoexecPERF.cfg
+++ b/Left 4 Dead 2/autoexecPERF.cfg
@@ -58,12 +58,16 @@ net_steamcnx_enabled "0"
 rate "1048576"
 sensitivity "4"
 snd_mixahead "0.045"
+sv_allow_wait_command "0"
 sv_forcepreload "1"
 sv_lan "1"
+sv_logecho "0"
+sv_logfile "0"
 sv_maxcmdrate "128"
 sv_maxrate "0"
 sv_mincmdrate "128"
 sv_minrate "1048576"
+sv_rcon_log "0"
 sv_unlockedchapters "99"
 
 bind mwheelup "+jump"
