--- a/Return To Castle Wolfenstein/autoexecSPHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecSPHQ.cfg
@@ -35,10 +35,15 @@ seta cg_drawcrosshair "8"
 seta cg_crosshaircolor "5"
 seta cg_errordecay "0"
 seta cg_truelightning "0"
+seta cg_footsteps "1"
+seta cg_coronafardist "1536"
+seta cg_coronas "1"
 
 seta com_maxfps "125"
 seta com_maxfpsunfocused "125"
 seta com_maxfpsminimized "125"
+
+seta com_hunkMegs "4096"
 
 seta r_intensity "1"
 seta r_mapoverbrightbits "2"
@@ -70,6 +75,7 @@ seta r_mergeLightmaps "1"
 seta r_baseSpecular "0"
 seta r_baseGloss "0"
 seta r_ext_compressed_textures "0"
+seta r_ext_multisample "16"
 seta r_ext_framebuffer_multisample "16"
 seta r_ext_texture_filter_anisotropic "1"
 seta r_ext_max_anisotropy "16"
@@ -96,6 +102,12 @@ seta r_deluxmapping "1"
 seta r_vertexlight "0"
 seta r_shadowfilter "0"
 seta r_nocurves "0"
+seta r_nocull "1"
+seta r_picmip2 "0"
+seta r_picmip "0"
+seta r_ati_fsaa_samples "0"
+seta r_ati_truform_tess "0"
+seta r_bloom "0"
 
 seta r_mode "-1"
 seta r_customWidth "4096"
@@ -107,6 +119,7 @@ seta sv_pure "0"
 seta sv_fps "20"
 seta sv_minrate "25000"
 seta sv_maxrate "0"
+seta sv_allowDownload "0"
 
 seta s_mixahead "0.045"
 seta s_khz "44"
