--- a/Return To Castle Wolfenstein/autoexecPERFSP.cfg
+++ b/Return To Castle Wolfenstein/autoexecPERFSP.cfg
@@ -6,6 +6,7 @@ echo "r_ssao 1 causes buggy shadows and graphical glitches"
 echo "r_autoexposure 1 dynamically changes brightness ingame, leave DISABLED at 0"
 echo "r_baseSpecular 0.04 renders reflective shininess on textures that DONT use them by default, leave DISABLED at 0"
 echo "r_baseGloss 0.3 renders glossiness on textures that DONT use them by default, leave DISABLED at 0"
+echo "logfile 2 to generate console log file"
 
 seta cl_running "1"
 seta cl_run "1"
