--- a/Return To Castle Wolfenstein/autoexecHQSP.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQSP.cfg
@@ -6,6 +6,7 @@ echo "r_ssao 1 causes buggy shadows and graphical glitches"
 echo "r_autoexposure 1 dynamically changes brightness ingame, leave DISABLED at 0"
 echo "r_baseSpecular 0.04 renders reflective shininess on textures that DONT use them by default, leave DISABLED at 0"
 echo "r_baseGloss 0.3 renders glossiness on textures that DONT use them by default, leave DISABLED at 0"
+echo "logfile 2 to generate console log file"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -104,7 +105,6 @@ seta r_shadowfilter "0"
 seta r_nocurves "0"
 seta r_nocull "1"
 seta r_picmip2 "0"
-seta r_picmip "0"
 seta r_ati_fsaa_samples "0"
 seta r_ati_truform_tess "0"
 seta r_bloom "0"
