--- a/Return To Castle Wolfenstein/autoexecPERFSP.cfg
+++ b/Return To Castle Wolfenstein/autoexecPERFSP.cfg
@@ -7,6 +7,7 @@ echo "r_autoexposure 1 dynamically changes brightness ingame, leave DISABLED at 
 echo "r_baseSpecular 0.04 renders reflective shininess on textures that DONT use them by default, leave DISABLED at 0"
 echo "r_baseGloss 0.3 renders glossiness on textures that DONT use them by default, leave DISABLED at 0"
 echo "logfile 2 to generate console log file"
+echo "com_hunkmegs 1024+ causes crash at launch"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -44,7 +45,7 @@ seta com_maxfps "125"
 seta com_maxfpsunfocused "125"
 seta com_maxfpsminimized "125"
 
-seta com_hunkMegs "4096"
+seta com_hunkMegs "1024"
 
 seta r_intensity "1"
 seta r_mapoverbrightbits "2"
