--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -40,6 +40,7 @@ seta cg_truelightning "0"
 seta cg_footsteps "1"
 seta cg_coronafardist "1536"
 seta cg_coronas "1"
+seta cg_wolfparticles "1"
 
 seta com_maxfps "125"
 seta com_maxfpsunfocused "125"
