--- a/Return To Castle Wolfenstein/autoexecPERF.cfg
+++ b/Return To Castle Wolfenstein/autoexecPERF.cfg
@@ -41,6 +41,11 @@ seta cg_footsteps "1"
 seta cg_coronafardist "0"
 seta cg_coronas "0"
 seta cg_wolfparticles "0"
+seta cg_particleLOD "2"
+seta cg_particleDist "0"
+seta cg_marktime "0"
+seta cg_fixedAspect "0"
+seta cg_fixedAspectFOV "0"
 
 seta com_maxfps "125"
 seta com_maxfpsunfocused "125"
