--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -8,6 +8,7 @@ echo "r_baseSpecular 0.04 renders reflective shininess on textures that DONT use
 echo "r_baseGloss 0.3 renders glossiness on textures that DONT use them by default, leave DISABLED at 0"
 echo "logfile 2 to generate console log file"
 echo "com_hunkMegs 1024+ causes crash at launch"
+echo "cg_coronafardist value too high will cause coronas to disappear"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -38,14 +39,15 @@ seta cg_crosshaircolor "5"
 seta cg_errordecay "0"
 seta cg_truelightning "0"
 seta cg_footsteps "1"
-seta cg_coronafardist "999999999999999999999999999"
+seta cg_coronafardist "999999999"
 seta cg_coronas "1"
 seta cg_wolfparticles "1"
 seta cg_particleLOD "0"
-seta cg_particleDist "999999999999999999999999999"
-seta cg_marktime "999999999999999999999999999"
+seta cg_particleDist "999999999"
+seta cg_marktime "999999999"
 seta cg_fixedAspect "0"
 seta cg_fixedAspectFOV "0"
+seta cg_gibs "1"
 
 seta com_maxfps "125"
 seta com_maxfpsunfocused "125"
@@ -116,7 +118,6 @@ seta r_ati_fsaa_samples "0"
 seta r_ati_truform_tess "0"
 seta r_bloom "0"
 seta r_fastsky "0"
-seta cg_gibs "1"
 
 seta r_mode "-1"
 seta r_customWidth "4096"
