--- a/Return To Castle Wolfenstein/autoexecPERF.cfg
+++ b/Return To Castle Wolfenstein/autoexecPERF.cfg
@@ -8,7 +8,7 @@ echo "r_baseSpecular 0.04 renders reflective shininess on textures that DONT use
 echo "r_baseGloss 0.3 renders glossiness on textures that DONT use them by default, leave DISABLED at 0"
 echo "logfile 2 to generate console log file"
 echo "com_hunkMegs 1024+ causes crash at launch"
-echo "cg_coronafardist value too high will cause coronas to disappear"
+echo "cg_coronafardist values too high will cause coronas to disappear"
 
 seta cl_running "1"
 seta cl_run "1"
