--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -9,6 +9,7 @@ echo "r_baseGloss 0.3 renders glossiness on textures that DONT use them by defau
 echo "logfile 2 to generate console log file"
 echo "com_hunkMegs 1024+ causes crash at launch"
 echo "cg_coronafardist values too high will cause coronas to disappear"
+echo "r_overbrightbits and r_mapoverbrightbits decrease performance and fps"
 
 seta cl_running "1"
 seta cl_run "1"
