--- a/Return To Castle Wolfenstein/autoexecHQ.cfg
+++ b/Return To Castle Wolfenstein/autoexecHQ.cfg
@@ -10,6 +10,7 @@ echo "logfile 2 to generate console log file"
 echo "com_hunkMegs 1024+ causes crash at launch"
 echo "cg_coronafardist values too high will cause coronas to disappear"
 echo "r_overbrightbits and r_mapoverbrightbits decrease performance and fps"
+echo "r_cubemapping 1 causes game to crash at loading screen when starting new campaigne"
 
 seta cl_running "1"
 seta cl_run "1"
