--- a/Quake III Arena/ioquake3/autoexecPERF.cfg
+++ b/Quake III Arena/ioquake3/autoexecPERF.cfg
@@ -27,6 +27,7 @@ seta cg_crosshaircolor "5"
 seta cg_errordecay "0"
 seta cg_truelightning "0"
 
+seta com_maxfps "125"
 seta com_maxfpsunfocused "125"
 seta com_maxfpsminimized "125"
 
