--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -1,4 +1,6 @@
 echo "MOHAA HQ CONFIG"
+echo "r_subdivisions 3- will cause map rendering errors"
+echo "r_forceClampToEdge 1 can help with black lines in the main menu and skybox in-game"
 
 seta cl_running "1"
 seta cl_run "1"
@@ -79,7 +81,7 @@ seta r_stencilbits "8"
 seta r_depthbits "24"
 seta r_overbrightbits "1"
 seta r_fullscreen "1"
-seta r_subdivisions "1"
+seta r_subdivisions "3"
 seta r_lodcurveerror "10000"
 seta r_lodbias "-2"
 seta r_flares "1"
@@ -108,6 +110,7 @@ seta r_lodcap "1.0"
 seta g_ddayfodderguys "2"
 seta g_ddayfog "0"
 seta g_ddayshingleguys "2"
+seta r_forceClampToEdge "1"
 
 seta r_mode "-1"
 seta r_customwidth "4096"
@@ -119,7 +122,7 @@ seta ter_error "0.1"
 seta ter_fastMark "0"
 seta ter_lock "0"
 seta ter_maxlod "100"
-seta ter_maxtri "24576"
+seta ter_maxtri "65535"
 seta ter_minMarkRadiu "8"
 
 seta vss_draw "1"
